Agregando estilos a los textos explicativos

--- a/pages/jungle.html
+++ b/pages/jungle.html
@@ -26,10 +26,10 @@
     <main>
         <div>
             <h1>JUNGLE</h1>
-            <p class="text">La <span>JUNGLA</span> es una fuente adicional de oro y experiencia para los jugadores. Al derrotar a los diferentes creeps que aparecen en ella obtienes oro y experiencia que te ayudan a adquirir objetos, desbloquear y mejorar habilidades y obtener ventaja sobre los jugadores que solo se centran en las lineas.</p> 
-            <p class="text">En la jungla se encuentra el lord, la tortuga y los buffs. Al ser eliminados te brindan beneficios como daño extra, regeneracion de vida, bonificaciones de experiencia o escudos y oro para tu equipo.</p> 
-            <p class="text">La jungla es un terreno ideal para emboscar a los enemigos que van por las distintas lineas y asi ayudar a los otros jugadores de tu equipo.</p> 
-            <p class="text">En la jungla se debe ser versatil y tener la capacidad de adaptarse a las necesidades del equipo, por lo que se recomienda ir con heroes capaces de eliminar rapidamente a todos los creeps de la jungla, que cuenten con una buena movilidad ya que necesitan moverse rapidamente entre las distintas areas de la jungla y poder llegar rapidamente a las distintas lineas para realizar las emboscadas o ganks.</p> 
+            <p class="texto-jungle">La <span class="jungle">JUNGLA</span> es una fuente adicional de oro y experiencia para los jugadores. Al derrotar a los diferentes creeps que aparecen en ella obtienes oro y experiencia que te ayudan a adquirir objetos, desbloquear y mejorar habilidades y obtener ventaja sobre los jugadores que solo se centran en las lineas.</p> 
+            <p class="texto-jungle">En la jungla se encuentra el lord, la tortuga y los buffs. Al ser eliminados te brindan beneficios como daño extra, regeneracion de vida, bonificaciones de experiencia o escudos y oro para tu equipo.</p> 
+            <p class="texto-jungle">La jungla es un terreno ideal para emboscar a los enemigos que van por las distintas lineas y asi ayudar a los otros jugadores de tu equipo.</p> 
+            <p class="texto-jungle">En la jungla se debe ser versatil y tener la capacidad de adaptarse a las necesidades del equipo, por lo que se recomienda ir con heroes capaces de eliminar rapidamente a todos los creeps de la jungla, que cuenten con una buena movilidad ya que necesitan moverse rapidamente entre las distintas areas de la jungla y poder llegar rapidamente a las distintas lineas para realizar las emboscadas o ganks.</p> 
         </div>
         <hr>
 
