--- a/pages/middle.html
+++ b/pages/middle.html
@@ -27,9 +27,9 @@
         <main>
             <div>
                 <h1>MIDDLE</h1>
-                <p class="text">La linea <span>MEDIA</span> es una de las tres rutas principales del mapa. Este carril tiene una posicion estrategica en el centro del mapa, lo que te brinda la capacidad de moverse rapidamente hacia otros carriles y areas importantes como la jungla, para ayudar a tus compañeros en caso de que lo necesiten, es decir, puedes tener impacto en todo el mapa. Tambien te brinda la capacidad de emboscar a los enemigos de otras lineas.</p> 
-                <p class="text">Ademas es clave para ejercer presion en las torres enemigas. Al derribar las torres del centro se abre el camino mas directo hacia el nexo enemigo.</p> 
-                <p class="text">En esta linea se recomienda usar <span>MAGOS</span>. Los Magos son heroes que infligen daño magico y que generalmente tienen habilidades de control de masas. Con sus habilidades pueden inhabilitar o relentizar a los enemigos para facilitar que su equipo los eliminen, controlar el campo de batalla y causar daño significativo.</p> 
+                <p class="texto-middle">La linea <span class="middle">MEDIA</span> es una de las tres rutas principales del mapa. Este carril tiene una posicion estrategica en el centro del mapa, lo que te brinda la capacidad de moverse rapidamente hacia otros carriles y areas importantes como la jungla, para ayudar a tus compañeros en caso de que lo necesiten, es decir, puedes tener impacto en todo el mapa. Tambien te brinda la capacidad de emboscar a los enemigos de otras lineas.</p> 
+                <p class="texto-middle">Ademas es clave para ejercer presion en las torres enemigas. Al derribar las torres del centro se abre el camino mas directo hacia el nexo enemigo.</p> 
+                <p class="texto-middle">En esta linea se recomienda usar <span class="middle">MAGOS</span>. Los Magos son heroes que infligen daño magico y que generalmente tienen habilidades de control de masas. Con sus habilidades pueden inhabilitar o relentizar a los enemigos para facilitar que su equipo los eliminen, controlar el campo de batalla y causar daño significativo.</p> 
             </div>
 
             <hr>
