Agregando target:_black a los footer

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -61,11 +61,11 @@
     <div class="footer-content">
         <h3>MOBILE LEGENDS</h3>
         <ul class="social">
-            <li><a href="https://www.facebook.com/MobileLegendsGameES"><i class="fab fa-facebook"></i></a></li>
-            <li><a href="https://twitter.com/MobileLegendsOL"><i class="fab fa-twitter"></i></a></li>
-            <li><a href="https://www.instagram.com/mobilelegendsgame/"><i class="fab fa-instagram"></i></a></li>
-            <li><a href="https://www.tiktok.com/@mlbbttofficial?lang=en"><i class="fab fa-tiktok"></i></a></li>
-            <li><a href="https://m.mobilelegends.com/en"><i class="fa-solid fa-globe"></i></a></li>
+            <li><a href="https://www.facebook.com/MobileLegendsGameES" target="_blank"><i class="fab fa-facebook"></i></a></li>
+            <li><a href="https://twitter.com/MobileLegendsOL" target="_blank"><i class="fab fa-twitter"></i></a></li>
+            <li><a href="https://www.instagram.com/mobilelegendsgame/" target="_blank"><i class="fab fa-instagram"></i></a></li>
+            <li><a href="https://www.tiktok.com/@mlbbttofficial?lang=en" target="_blank"><i class="fab fa-tiktok"></i></a></li>
+            <li><a href="https://m.mobilelegends.com/en" target="_blank"><i class="fa-solid fa-globe"></i></a></li>
         </ul>
     </div>
     <div class="footer-bottom">
