--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="./css/bootstrap.css">
     <link rel="stylesheet" href="./css/style.css">
     
     <title>Guía MLBB</title>
@@ -206,6 +207,6 @@
         <p>copyright &copy;2023 designed by <span>Virginia Nardi</span></p>
     </div>
 </footer>
-
+<script src="./js/bootstrap.js"></script>
 </body>
 </html>
