--- a/pages/experience.html
+++ b/pages/experience.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+    <link rel="stylesheet" href="./css/bootstrap.css">
     <link rel="stylesheet" href="../css/style.css">
     <title>Experience / Guía MLBB</title>
 </head>
@@ -98,6 +99,6 @@
         <p>copyright &copy;2023 designed by <span>Virginia Nardi</span></p>
     </div>
 </footer>
-
+<script src="./js/bootstrap.js"></script>
 </body>
 </html>
