--- a/pages/gold.html
+++ b/pages/gold.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+    <link rel="stylesheet" href="./css/bootstrap.css">
     <link rel="stylesheet" href="../css/style.css">
     <title>Gold / Guía MLBB</title>
 </head>
@@ -76,6 +77,6 @@
         </div>
     </footer>
 
-
+    <script src="./js/bootstrap.js"></script>
 </body>
 </html>
