--- a/pages/roam.html
+++ b/pages/roam.html
@@ -5,17 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
-    <link rel="stylesheet" href="./css/bootstrap.css">
+    <link rel="stylesheet" href="../css/bootstrap.css">
     <link rel="stylesheet" href="../css/style.css">
     <title>Roam / Guía MLBB</title>
 </head>
 <body>
-
-
-        <!-- BARRA DE NAVEGACIÓN -->
-    <header class="interior">
-        <a href="../index.html" class="logo"><img src="../media/logo.png" alt=""></a>
+    <!-- BARRA DE NAVEGACIÓN -->
+    <header class="interior"> 
         <nav class="menu">
+            
+            <input type="checkbox" id="check">
+            <label for="check" class="menu-icon">
+                <i class='bx bx-menu ' style='color:#ffffff'  ></i>
+            </label>
+            
+            <a href="../index.html" class="enlace">
+                <img class="logo" src="../media/logo.png" alt="">
+            </a>
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
                 <li><a href="./experience.html">Experience</a></li>
@@ -23,7 +29,7 @@
                 <li><a href="./middle.html">Middle</a></li>
                 <li><a href="./jungle.html">Jungle</a></li>
                 <li><a href="./gold.html">Gold</a></li>
-                <li><a href="./contacto.html">Contacto</a></li 
+                <li><a href="./contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
@@ -90,6 +96,6 @@
             <p>copyright &copy;2023 designed by <span>Virginia Nardi</span></p>
         </div>
     </footer>
-    <script src="./js/bootstrap.js"></script>
+    <script src="../js/bootstrap.js"></script>
 </body>
 </html>
