--- a/pages/experience.html
+++ b/pages/experience.html
@@ -80,7 +80,7 @@
             <img src="../media/martis.jpg">
             <img src="../media/gatotkaca.jpg">
             <img src="../media/alpha.jpg">
-            <img src="../media/joy.jpg">
+            <img src="../media/joy.jpg"> /*revisar porque esta dos veces*/
 
 
         </section>
