Mejorando los parrafos

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -39,10 +39,10 @@
         <!-- CONTACTO -->
 <h1>CONTACTO</h1>
 <div>
-    <p class="text">
+    <p class="texto-contacto">
         Danos tu opinion al respecto, saber que es lo que te gustaria ver, contenido que desees ver o cambios que harias
     </p>
-    <p class="text">
+    <p class="texto-contacto">
         Tu opinion nos interesa!
     </p>
 </div>
