dando mas estilosy media queries a los textos explicativos

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <!-- TITULO PRINCIPAL Y EXPLICACION DEL JUEGO -->
     <main>
         <h1>MOBILE LEGENDS</h1>
-        <div>
+        <div class="desarrollo">
         <p class="texto-index">Mobile Legends: Bang Bang es un juego de estilo MOBA (Multiplayer Online Battle Arena) para dispositivos moviles, creado por la compañia Shanghai Moonton Technology.</p> 
 
         <p class="texto-index">En este juego, los jugadores luchan en batallas de 5 vs 5 con el objetivo de destruir el nexo o base enemiga a la que se enfrentan. Los jugadores pueden elegir entre una gran variedad de heroes para jugar y cada uno de ellos tiene habilidades unicas. A medida que avanza el juego los jugadores ganan <span class="index">EXPERIENCIA</span>, utilizada para subir de nivel y desbloquear nuevas habilidades, y <span class="index">ORO</span>, el cual se puede utilizar para comprar objetos y mejorar el equipo del jugador.  </p> 
