--- a/pages/experience.html
+++ b/pages/experience.html
@@ -35,8 +35,9 @@
     </header>
 
     <main>
-        <div>
-            <h1>EXPERIENCE</h1>
+        <h1>EXPERIENCE</h1>
+        <div class="desarrollo">
+            
             <p class="texto-experience">La linea de <span class="experience">EXPERIENCIA</span> es una de las tres rutas principales del mapa. Esta es crucial para ganar ventaja sobre tus oponentes y asegurar la victoria. Es esencial obtener la mayor cantidad de oro y experiencia en esta linea.</p>
             <p class="texto-experience">Este carril te permite obtener experiencia de manera mas rapida y eficiente en comparacion a los otros jugadores, esto sucedera mientras mantengas el control de la linea eliminando a los subditos enemigos y alejando al oponente de los tuyos, permitiendo asi que los aliados avancen hacia las torres enemigas.</p>
             <p class="texto-experience">El subir mas rapido de nivel te permite desbloquear y mejorar tus habilidades, lo que te dara mayor capacidad de infligir daño y sobrevivir a las peleas.</p>
