--- a/pages/gold.html
+++ b/pages/gold.html
@@ -35,8 +35,9 @@
         </nav>
     </header>
     <main>
-        <div>
-            <h1>GOLD</h1>
+        <h1>GOLD</h1>
+        <div class="desarrollo">
+            
             <p class="texto-gold">La linea de <span class="gold">ORO</span> es una de las tres principales rutas del mapa. Esta es una de las principales fuentes de ingresos de oro para los jugadores. Tiene importancia en el juego tardio, ya que a medida que avanzas en el juego, puedes rotar a otras partes del mapa y asi ayudar a tus compañeros a eliminar enemigosen peleas en equipo o a destruir las torres de las otras lineas. Dominar esta linea te permitira tener una buena ventaja en la partida y contribuir a la victoria de tu equipo.</p> 
             <p class="texto-gold">En esta linea se recomienda usar <span class="gold">TIRADORES</span>. Estos hacen daño a distancia con una produccion de daño constante y alta. Su objetivo principal es infligir daño a los enemigos desde una distancia segura. Son esenciales para derribar torres y destruit al enemigo en cuestion de segundos cuando la partida este avanzada.</p> 
         </div>
