--- a/pages/roam.html
+++ b/pages/roam.html
@@ -35,8 +35,9 @@
         </nav>
     </header>
     <main>
-        <div>
-            <h1>ROAM</h1>
+        <h1>ROAM</h1>
+        <div class="desarrollo">
+            
             <p class="texto-roam">Quien RECORRA, debe estar atento a las distintas lineas y brindar apoyo cuando sea necesario, lo que implica ayudar a los compañeros en enfrentamientos en el carril, emboscadas o defensa de torres. Su objetivo principal es garantizar que todas las lineas esten protegidas y que los compañeros esten seguros y respaldados.</p> 
             <p class="texto-roam">El roaming debe coordinar y participar en emboscadas y ganks junto con otros jugadores del equipo. Tambien debe estar atento al lord, las tortugas y los buffs, debe protegerlos y ayudar a asegurarlos para el equipo. Su contribucion en todo el mapa es muy importante para que su equipo consiga la victoria.</p> 
             <p class="texto-roam">Para recorrer se recomienda utilizar: <span class="roam">APOYOS</span> o <span class="roam">TANQUES</span>. Los apoyos son responsables de proteger y potenciar a su equipo. Pueden tener escudos, habilidades de curacion, de control o que aumenten eñ daño que sus compañeros pueden hacerle a los enemigos.</p> 
