--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -38,7 +38,7 @@
     <main>
         <!-- CONTACTO -->
 <h1>CONTACTO</h1>
-<div>
+<div class="desarrollo">
     <p class="texto-contacto">
         Danos tu opinion al respecto, saber que es lo que te gustaria ver, contenido que desees ver o cambios que harias
     </p>
