--- a/pages/jungle.html
+++ b/pages/jungle.html
@@ -34,8 +34,9 @@
         </nav>
     </header>
     <main>
-        <div>
-            <h1>JUNGLE</h1>
+        <h1>JUNGLE</h1>
+        <div class="desarrollo">
+            
             <p class="texto-jungle">La <span class="jungle">JUNGLA</span> es una fuente adicional de oro y experiencia para los jugadores. Al derrotar a los diferentes creeps que aparecen en ella obtienes oro y experiencia que te ayudan a adquirir objetos, desbloquear y mejorar habilidades y obtener ventaja sobre los jugadores que solo se centran en las lineas.</p> 
             <p class="texto-jungle">En la jungla se encuentra el lord, la tortuga y los buffs. Al ser eliminados te brindan beneficios como daño extra, regeneracion de vida, bonificaciones de experiencia o escudos y oro para tu equipo.</p> 
             <p class="texto-jungle">La jungla es un terreno ideal para emboscar a los enemigos que van por las distintas lineas y asi ayudar a los otros jugadores de tu equipo.</p> 
